src/snapshots/herald__app__tests__app_dialog_overlay.snap
---
source: src/app.rs
expression: output
---
┌ herald ──────────────────────────────────────────────┐┌ Sessions (1) ────────┐
│                                                      ││ ○ test [starting]    │
│                                                      ││                      │
│                                                      ││                      │
│         ┌ New Session ─────────────────────────────────────────────┐         │
│         │ Nickname:                                                │         │
│         │  new-task                                                │         │
│         │ Provider:                                                │         │
│         │    (none)                                                │         │
│         │ Directory:                                               │         │
│         │                                                          │         │
│         │ Worktree:                                                │         │
│         │  [ ] isolate in git worktree                             │         │
│         │ Prompt:                                                  │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │ Enter:next  Tab:next field  Esc:cancel                   │         │
│         └──────────────────────────────────────────────────────────┘         │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘│                      │
 herald  NEW SESSION  | 1 sessions | all clear | q:quit └──────────────────────┘
