src/snapshots/herald__app__tests__app_initial_render.snap
---
source: src/app.rs
expression: output
---
┌ herald ──────────────────────────────────────────────┐┌ Sessions (0) ────────┐
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│          Press 'n' to create a new session           ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘│                      │
 herald  SIDEBAR  | 0 sessions | all clear | q:quit n:ne└──────────────────────┘
