src/snapshots/herald__app__tests__app_with_sessions.snap
---
source: src/app.rs
expression: output
---
┌ test — /tmp — 0s — "prompt" ─────────────────────────┐┌ Sessions (2) ────────┐
│                                                      ││▸◐ test [running]     │
│                                                      ││ ● test [needs input] │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│          Press 'n' to create a new session           ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘│                      │
 herald  SIDEBAR  | 2 sessions | all clear | q:quit n:ne└──────────────────────┘
